Add Databinding and first two Assignments

--- a/CGAngular6/src/app/servers/servers.component.html
+++ b/CGAngular6/src/app/servers/servers.component.html
@@ -1,2 +1,11 @@
+<label>Server Name: </label>
+<!-- <input type="text" name="" id="" class="form-control" (input)="onUpdateServerName($event)"> -->
+<input type="text" class="form-control" [(ngModel)]="serverName">
+<button class="btn btn-primary" [disabled] = "!allowNewServer" (click)="onCreateServer()">Add Server</button>
+<p [innerText]="serverCreationStatus"></p>
 <app-server></app-server>
 <app-server></app-server>
+<!-- [] = Data Binding Syntax -->
+<!-- () = Event Binding Syntax -->
+<!-- {{}} = String Interpolation Syntax -->
+<!-- [()] = Two-Way Binding Syntax -->
