--- a/CGAngular6App/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/CGAngular6App/src/app/recipes/recipe-list/recipe-list.component.html
@@ -5,16 +5,7 @@
 </div>
 <hr>
 <div class="row">
-    <div class="col-xs-12">
-        <a *ngFor="let r of recipes" href="#" class="list-group-item clearfix">
-            <div class="pull-left">
-                <h4 class="list-group-item-heading">{{ r.name }}</h4>
-                <p class="list-group-item-text">{{ r.description }}</p>
-            </div>
-            <span class="pull-right">
-                <img [src]="r.imagePath" [alt]="r.name" class="img-responsive" style="max-height: 50px">
-            </span>
-        </a>      
-        <app-recipe-item></app-recipe-item>
+    <div class="col-xs-12"> 
+        <app-recipe-item *ngFor="let r of recipes" [item]="r" (selectedItem)="selectedItem($event)"></app-recipe-item>
     </div>
 </div>
